--- a/index.html
+++ b/index.html
@@ -39,7 +39,39 @@
                         <img src="https://ars.els-cdn.com/content/image/1-s2.0-S0924424724008240-ga1_lrg.jpg" alt="" width="522" height="397">
                     </div>
                 </div>
-
+                <div class="work__box">
+                    <div class="work__text">
+                        <h1>Dense Object Cloud SLAM (DOCS): High-Fidelity Semantic Object Cloud Maps for Autonomous Inspection and Exploration</h1>
+                        <p><strong>Carnegie Mellon University CERLAB</strong> | January 2024 - May 2025</p>
+                        <p>Multi-modally equipped robots have emerged as assets in industrial applications through autonomous exploration and inspection capabilities. Existing approaches rely on simplified geometric representations that are resource efficient but sacrifice environmental fidelity and lack robust mechanisms for cross-robot collaboration in decentralized networks. To address these gaps, we present a decentralized semantic SLAM framework that enables robots to construct high-fidelity object-centric maps using dense point clouds rather than abstract primitives. Our system introduces three innovations: (1) a hierarchical metric-semantic representation combining sparse landmark graphs for long-term SLAM with on-demand dense point clouds for detailed inspection, (2) semantics-driven place recognition enabling map merging across robots with diverse sensors (LiDAR/RGBD), and (3) a modular and framework that can be combined with existing frameworks for use in distributed mapping by heterogeneous robots. We validate DOCS on a UAV platform equipped with LiDAR and RGBD sensors, demonstrating its ability to generate dense, semantically labeled object maps with mean cloud-to-cloud distances as low as 0.9 cm and completeness rates above 83% for key objects compared to ground truth scans. These results establish DOCS as a promising approach for high-precision, object-aware mapping in industrial environments, laying the groundwork for future extensions to dynamic scene understanding and broader deployment in real-world autonomous systems.</p>
+                    </div>
+                    <div class="work__image-box">
+                        <figure class="project-figure">
+                            <img src="https://github.com/aatishg01/Portfolio2/blob/main/DOCS%20Hardware.jpg?raw=true" alt="DOCS Hardware Setup" class="project-image" />
+                            <figcaption>DOCS Hardware Setup</figcaption>
+                        </figure>
+                        <div class="image-row">
+                            <figure class="project-figure">
+                                <img src="https://github.com/aatishg01/Portfolio2/blob/main/DOCS%20Object%20Map.png?raw=true" alt="DOCS Object Map" class="project-image" />
+                                <figcaption>Object-Centric Dense Map</figcaption>
+                            </figure>
+                            <figure class="project-figure">
+                                <img src="https://github.com/aatishg01/Portfolio2/blob/main/DOCS%20System.png?raw=true" alt="DOCS System Architecture" class="project-image" />
+                                <figcaption>System Architecture</figcaption>
+                            </figure>
+                        </div>
+                        <div class="image-row">
+                            <figure class="project-figure">
+                                <img src="https://github.com/aatishg01/Portfolio2/blob/main/DOCS%20Merge.png?raw=true" alt="DOCS Map Merging" class="project-image" />
+                                <figcaption>Multi-Robot Map Merging</figcaption>
+                            </figure>
+                            <figure class="project-figure">
+                                <img src="https://github.com/aatishg01/Portfolio2/blob/main/DOCS%20Comparison.png?raw=true" alt="DOCS Comparison" class="project-image" />
+                                <figcaption>Comparison with Ground Truth</figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
                 
 
                 <div class="work__box">
