--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     
                     <div class="work__image-box">
                         <iframe width="560" height="315" 
-                                src="https://www.youtube.com/embed/AegWtIFUd98?si=8ynDjjdBnRi-2Pu_" 
+                                src="https://www.youtube.com/embed/gZVtml4Kebc?si=EA6VFAqXglOCgaop" 
                                 title="YouTube video player" 
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
